test/TestPhases/typechecker/invalid/intOutRanges.blc
module

function inOutRanges()
    var a: int8 = -129
    var b: int8 = 128
    var c: int16 = -32769
    var d: int16 = 32768
    var e: int32 = -2147483649
    var f: int32 = 2147483648
    var g: int64 = -9223372036854775809
    var h: int64 = 9223372036854775808

    var i: nat8 = 256
    var j: nat16 = 65536
    var k: nat32 = 4294967296
    var l: nat64 = 18446744073709551616

    var m: nat8 = -1
    var n: nat16 = -1
    var o: nat32 = -1
    var p: nat64 = -1
end
